--- a/mi-web-app/src/app/app.component.html
+++ b/mi-web-app/src/app/app.component.html
@@ -1,4 +1,12 @@
+<h1>Mi App Angular</h1>
+<a routerLink="/">Inicio</a>
+<a routerLink="/libros">Libros Favoritos</a>
+
+<router-outlet></router-outlet>
+
 <!-- 
 <app-usuario></app-usuario>
 -->
+<!--
 <app-libros></app-libros>
+-->
