Formulario con angular material y agregando componentes

--- a/mi-web-app/src/app/app.component.html
+++ b/mi-web-app/src/app/app.component.html
@@ -1,8 +1,11 @@
+<router-outlet></router-outlet>
+<!--
 <h1>Mi App Angular</h1>
 <a routerLink="/">Inicio</a>
 <a routerLink="/libros">Libros Favoritos</a>
 
 <router-outlet></router-outlet>
+-->
 
 <!-- 
 <app-usuario></app-usuario>
